<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_players"
        android:orderInCategory="0"
        android:title="@string/menuitem_show_players"
        android:icon="@drawable/ic_menu_allfriends"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_ships"
        android:orderInCategory="1"
        android:title="@string/menuitem_show_units"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_history"
        android:orderInCategory="2"
        android:title="@string/menuitem_show_history"
        android:icon="@drawable/ic_menu_moreoverflow"
        android:showAsAction="ifRoom|withText"/>

</menu>